--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     })
     wearApp project(':wear')
     compile 'com.google.android.gms:play-services:10.0.1'
-    compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:design:25.3.1'
     testCompile 'junit:junit:4.12'
 }
